tests/e2e/object_assign_any.story
a = 1 to any
http server
    server = a
